fix: schema page spacing regression after PrimeNG 20 migration

--- a/frontend/src/app/themes/guardian/dropdown.scss
+++ b/frontend/src/app/themes/guardian/dropdown.scss
@@ -1,6 +1,7 @@
 .guardian-dropdown {
     height: 40px;
 
+    &.p-select,
     .p-select {
         background: #ffffff;
         border: 1px solid var(--guardian-grey-color-2, #E1E7EF);
@@ -45,6 +46,7 @@
         width: 100%;
         height: 100%;
 
+        &.p-select,
         .p-select {
             width: 100%;
             height: 100%;
@@ -88,6 +90,7 @@
     &.guardian-dropdown-cell {
         width: 100%;
 
+        &.p-select,
         .p-select {
             border: none !important;
         }
